--- a/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
+++ b/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
@@ -1,9 +1,9 @@
 <ion-header>
     <ion-navbar class="borde" hideBackButton>
         <ion-row>
-            <ion-col col-1>
+            <!-- <ion-col col-1>
                 <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon>
-            </ion-col>
+            </ion-col> -->
             <ion-col col-1 align="center">
                 <img src="./assets/content/line2.png" class="imgLi" alt="">
             </ion-col>
