--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -158,7 +158,11 @@
 
             <ion-item (click)="goMonitorear()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
-                <img item-start class="imgRes4" src="../assets/imgs/icons/admin-evento.png">
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="../assets/imgs/icons/admin-eventoN.png">
+
+                </ion-avatar>
 
                 Monitoreo de reservaciones
                 <ion-badge class="buttonColor" item-end>
@@ -168,7 +172,12 @@
 
             <ion-item (click)="adminReservaciones()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
-                <img item-start class="imgRes4" src="../assets/imgs/icons/admin-historial.png">
+
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="../assets/imgs/icons/admin-historialN.png">
+
+                </ion-avatar>
 
                 Gestión de reservaciones
                 <ion-badge class="buttonColor" item-end>
@@ -178,7 +187,11 @@
 
             <ion-item (click)="goReservacionHistorial()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
-                <img item-start class="imgRes4" src="../assets/imgs/icons/corona.png">
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="../assets/imgs/icons/coronaN.png">
+
+                </ion-avatar>
 
                 Historial de reservaciones
                 <ion-badge class="buttonColor" item-end>
@@ -188,7 +201,11 @@
 
             <ion-item (click)="goCodigoRp()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
-                <img item-start class="imgRes4" src="../assets/imgs/icons/book.png">
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="../assets/imgs/icons/bookN.png">
+
+                </ion-avatar>
 
                 Código de reservacion
                 <ion-badge class="buttonColor" item-end>
