Navegacion usuario eHome

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
     <script src="cordova.js"></script>
 
     <!-- Google APIS-->
-    <script type="text/javascript" async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDhkHiz_LkMhVCfTsGJajw5Ag4u9d6ah2I&libraries=places">
-    </script>
+    <!-- <script type="text/javascript" async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDhkHiz_LkMhVCfTsGJajw5Ag4u9d6ah2I&libraries=places">
+    </script> -->
     <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
