--- a/src/pages/admin-users-guest/admin-users-guest.html
+++ b/src/pages/admin-users-guest/admin-users-guest.html
@@ -2,10 +2,10 @@
 
     <ion-navbar hideBackButton>
         <ion-row>
-            <ion-col col-1>
+            <!-- <ion-col col-1>
                 <ion-icon name="ios-arrow-back-outline" (click)="behind()" style="color:white"></ion-icon>
 
-            </ion-col>
+            </ion-col> -->
             <ion-col col-8>
                 <ion-title>Usuarios</ion-title>
             </ion-col>
