Reservaciones canceladas terminado

--- a/src/pages/reserva-detalle/reserva-detalle.html
+++ b/src/pages/reserva-detalle/reserva-detalle.html
@@ -199,7 +199,8 @@
                 <ion-col col-6 text-center>
                     <!-- <ion-icon ios="ios-checkmark-circle" md="md-checkmark-circle" class="icono"></ion-icon>
                 Aceptar Reservación -->
-                    <button ion-button color="secondary" large (click)="Aceptar(reserv.uid)">Aceptar </button>
+                    <button ion-button color="secondary" large (click)="Aceptar(reserv.idReservacion)">Aceptar </button>
+                    {{reserv.idReservacion}}
                 </ion-col>
             </ion-row>
             <br><br>
