btn admon gral perfil master

--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -223,6 +223,14 @@
                 </ion-badge>
             </ion-item>
 
+            <ion-item (click)="goReservacion()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <img item-start class="imgRes4" src="./assets/content/icono3.png"> Admon. General
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
+                </ion-badge>
+            </ion-item>
+
         </div>
 
     </ion-card>
