--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -103,36 +103,67 @@
                 <img class="imagen_perfil" src="../assets/imgs/icons/home-03.png" />
 
             </div>
+            <br>
+            <div align="center">
 
-            <ion-item>
-                <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon>
+                <ion-icon ios="ios-list" md="md-list" item-start style="color: #FD9530"></ion-icon>
+                <font size="3" color=""> <b> Admon. General </b></font>
+
+            </div>
+            <br>
+            <ion-item (click)="goSucursal()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="./assets/content/icono3.png">
+
+                </ion-avatar>
+
                 Administrar sucursales
-                <ion-badge class="buttonColor" item-end (click)="goSucursal()">
-                    <ion-icon ios="ios-search" md="md-search" style="color:white"></ion-icon>
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
                 </ion-badge>
             </ion-item>
 
-            <ion-item>
-                <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon>
+            <ion-item (click)="goCupones()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="./assets/content/icono3.png">
+
+                </ion-avatar>
+
                 Administrar cupones
-                <ion-badge class="buttonColor" item-end (click)="goCupones()">
-                    <ion-icon ios="ios-search" md="md-search" style="color:white"></ion-icon>
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
                 </ion-badge>
             </ion-item>
 
-            <ion-item>
-                <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon>
+            <ion-item (click)="goCupones()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="./assets/content/icono3.png">
+
+                </ion-avatar>
+
                 Administrar ciudades
-                <ion-badge class="buttonColor" item-end (click)="goCupones()">
-                    <ion-icon ios="ios-search" md="md-search" style="color:white"></ion-icon>
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
                 </ion-badge>
             </ion-item>
 
-            <ion-item>
-                <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon>
+            <ion-item (click)="goConsumo()">
+                <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
+                <ion-avatar item-start>
+
+                    <img class="imgRes4" src="./assets/content/icono3.png">
+
+                </ion-avatar>
+
                 Consumos
-                <ion-badge class="buttonColor" item-end (click)="goConsumo()">
-                    <ion-icon ios="ios-search" md="md-search" style="color:white"></ion-icon>
+                <ion-badge class="buttonColor" item-end>
+                    <ion-icon ios="ios-arrow-forward" md="md-arrow-forward" style="color:white"></ion-icon>
                 </ion-badge>
             </ion-item>
 
@@ -160,7 +191,7 @@
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <ion-avatar item-start>
 
-                    <img class="imgRes4" src="../assets/imgs/icons/admin-eventoN.png">
+                    <img class="imgRes4" src="./assets/content/icono3.png">
 
                 </ion-avatar>
 
@@ -175,7 +206,7 @@
 
                 <ion-avatar item-start>
 
-                    <img class="imgRes4" src="../assets/imgs/icons/admin-historialN.png">
+                    <img class="imgRes4" src="./assets/content/icono3.png">
 
                 </ion-avatar>
 
@@ -189,7 +220,7 @@
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <ion-avatar item-start>
 
-                    <img class="imgRes4" src="../assets/imgs/icons/coronaN.png">
+                    <img class="imgRes4" src="./assets/content/icono3.png">
 
                 </ion-avatar>
 
@@ -203,7 +234,7 @@
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <ion-avatar item-start>
 
-                    <img class="imgRes4" src="../assets/imgs/icons/bookN.png">
+                    <img class="imgRes4" src="./assets/content/icono3.png">
 
                 </ion-avatar>
 
