--- a/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.html
+++ b/src/pages/admin-historial-reservaciones/admin-historial-reservaciones.html
@@ -35,75 +35,75 @@
         <ion-col col-1></ion-col>
     </ion-row>
 
-    <!-- <div *ngIf="reservaciones.length >= 1"> -->
+    <!-- <div *ngIf="noReservaciones >= 1"> -->
 
-        <!-- INICIA ION-ITEM PARA EL HISTORIAL DE LAS RESERVACIONES -->
+    <!-- INICIA ION-ITEM PARA EL HISTORIAL DE LAS RESERVACIONES -->
 
-        <div class="content" scrollable (scrollPosition)="scrollHandler($event)">
+    <div class="content" scrollable (scrollPosition)="scrollHandler($event)">
 
-            <div class="container">
+        <div class="container">
 
-                <ion-item *ngFor="let reservacion of page.data | async">
+            <ion-item *ngFor="let reservacion of page.data | async">
 
-                    <ion-avatar item-start>
+                <ion-avatar item-start>
 
-                        <img src="{{ (reservacion.idUsuario | getNameUser | async)?.photoURL }}">
+                    <img src="{{ (reservacion.idUsuario | getNameUser | async)?.photoURL }}">
 
-                    </ion-avatar>
+                </ion-avatar>
 
-                    <h2 style="text-transform: uppercase">
-                        <ion-icon ios="ios-contact" md="md-contact" item-start style="color: #fcc04d"></ion-icon>
-                        Nombre:
-                        <b>{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
-                    </h2>
+                <h2 style="text-transform: uppercase">
+                    <ion-icon ios="ios-contact" md="md-contact" item-start style="color: #fcc04d"></ion-icon>
+                    Nombre:
+                    <b>{{ (reservacion.idUsuario | getNameUser | async)?.displayName }}</b>
+                </h2>
 
-                    <h3>
-                        <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d"></ion-icon>
-                        Fecha:
-                        <b> {{ reservacion.fechaR | date: 'dd/MM/yyyy' }} </b>
-                    </h3>
+                <h3>
+                    <ion-icon ios="ios-calendar" md="md-calendar" item-start style="color: #fcc04d"></ion-icon>
+                    Fecha:
+                    <b> {{ reservacion.fechaR | date: 'dd/MM/yyyy' }} </b>
+                </h3>
 
-                    <p class="hora">
-                        <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon>Hora de
-                        reservación: <b> {{ reservacion.hora }} </b>
-                    </p>
-                    <p class="hora" item-end>
-                        <img src="./assets/content/Ellipse55.png" class="imgElli" alt=""> {{ reservacion.estatus }}
-                    </p>
+                <p class="hora">
+                    <ion-icon ios="ios-time" md="md-time" item-start style="color: #fcc04d"></ion-icon>Hora de
+                    reservación: <b> {{ reservacion.hora }} </b>
+                </p>
+                <p class="hora" item-end>
+                    <img src="./assets/content/Ellipse55.png" class="imgElli" alt=""> {{ reservacion.estatus }}
+                </p>
 
-                    <ng-container *ngIf="reservacion.idevento != null">
+                <ng-container *ngIf="reservacion.idevento != null">
 
-                        <ng-container *ngFor="let event of infoEvento">
+                    <ng-container *ngFor="let event of infoEvento">
 
-                            <ng-container *ngIf="reservacion.idevento == event.uid">
+                        <ng-container *ngIf="reservacion.idevento == event.uid">
 
-                                <p class="hora">
-                                    <ion-icon ios="ios-beer" md="md-beer" item-start style="color: #fcc04d"></ion-icon> {{
+                            <p class="hora">
+                                <ion-icon ios="ios-beer" md="md-beer" item-start style="color: #fcc04d"></ion-icon> {{
                                 event.titulo }}
-                                </p>
-
-                            </ng-container>
+                            </p>
 
                         </ng-container>
 
                     </ng-container>
 
-                    <button ion-button block round class="btnDetalle" (click)="goDetalle(reservacion.idReservacion)">
+                </ng-container>
 
-                        Detalle
+                <button ion-button block round class="btnDetalle" (click)="goDetalle(reservacion.idReservacion)">
 
-                    </button>
+                    Detalle
 
-                </ion-item>
+                </button>
 
+            </ion-item>
 
-            </div>
 
         </div>
 
+    </div>
+
     <!-- </div> -->
 
-    <ion-list *ngIf="reservaciones.length == 0">
+    <ion-list *ngIf="noReservaciones == 0">
 
         <br><br><br><br><br><br><br><br><br><br><br><br>
         <div>
@@ -118,5 +118,5 @@
             </p>
         </div>
     </ion-list>
-    
+
 </ion-content>
