Alta Usuarios RP, etc

--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -161,7 +161,7 @@
 
             </div>
 
-            <ion-item (click)="goListaUsuariosEmpleados('master')">
+            <ion-item (click)="goListaUsuariosEmpleados('a')">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <img item-start class="imgRes4" src="./assets/content/icono4.png"> Administración de usuarios
                 <ion-badge class="buttonColor" item-end>
