--- a/src/pages/admin-users-guest/admin-users-guest.html
+++ b/src/pages/admin-users-guest/admin-users-guest.html
@@ -200,7 +200,7 @@
     </div>
     <div *ngIf="usuario == 'a' ">
         <ion-fab left bottom>
-            <button ion-fab color="light" (click)="mostrar_modal()">
+            <button ion-fab color="primary" (click)="mostrar_modal()">
                 <ion-icon name="md-person-add"></ion-icon>
             </button>
             <!-- <ion-fab-list side="right">
