--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -216,7 +216,7 @@
                 </ion-badge>
             </ion-item>
 
-            <ion-item (click)="goReservacionHistorial()">
+            <ion-item *ngIf="_userAdmin.type == 'a' || _userAdmin.type == 'coordinacion'" (click)="goReservacionHistorial()">
                 <!-- <ion-icon ios="ios-play" md="md-play" style="color: #fcc04d"></ion-icon> -->
                 <ion-avatar item-start>
 
